--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,6 @@
   align-items: center;
 }
 
-.buttonSection {
-
-}
 
 .fullButton {
   width: 100%;
@@ -16,4 +13,24 @@
 
 .fullButton:hover {
   background-color: green;
+}
+
+.Footer {
+  background-color: #012604;
+  text-align: center;
+  margin-top: auto;
+  color: white;
+  padding: 10x;
+}
+
+.containerForText {
+  display: flex;
+  gap: 60px;
+  list-style: none;
+  margin: 0 auto;
+}
+
+.listItems {
+  text-align: left;
+ margin-left: 200px;
 }
