--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,47 @@
   text-align: left;
  margin-left: 200px;
 }
+
+.listItemHover:hover {
+  cursor: pointer;
+  color: white;
+}
+
+.listItemHover{
+  color: rgb(142, 143, 145);
+}
+
+.appLogo {
+  height: 70px;
+  width: 70px;
+}
+
+.newsLetterSection {
+  background-color: white;
+  color: black;
+  display: flex;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  justify-content: space-evenly;
+align-items: center;
+gap: 10px;
+}
+
+.btn {
+  background-color: #00B108;
+  color: white;
+  height: 30px;
+  border-radius: 30px;
+  font-size: small;
+  
+}
+
+.form {
+  border-radius: 20px;
+  height: 30px;
+  font-size: small;
+}
+
+.form:focus {
+  outline: none;
+}
