--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,11 @@
   width: 100%;
   background-color: #00B108;
   border: none;
+  color: white;
 }
 
 .fullButton:hover {
-  background-color: green;
+  background-color: #012604;
 }
 
 .Footer {
@@ -45,23 +46,24 @@
 }
 
 .appLogo {
-  height: 70px;
-  width: 70px;
+  height: 60px;
+  width: 60px;
 }
 
 .newsLetterSection {
   background-color: white;
   color: black;
   display: flex;
-  padding-top: 15px;
-  padding-bottom: 5px;
-  justify-content: space-evenly;
-align-items: center;
-gap: 10px;
+  padding-top: none;
+  padding-bottom: none;
+  align-items:  center;
+  justify-content: space-between;
+  width: 100%;
+  height: 60px;
 }
 
 .btn {
-  background-color: #00B108;
+  background-color: #012604;
   color: white;
   height: 30px;
   border-radius: 30px;
@@ -77,4 +79,42 @@ gap: 10px;
 
 .form:focus {
   outline: none;
+}
+
+.lastSection {
+  outline-style: solid;
+  outline-width: 0.1px;
+  outline-color: grey;
+  display: flex;
+  gap: 450px;
+  padding-top: 15px;
+}
+
+.iconSection {
+  display: flex;
+  gap: 10px;
+}
+
+.inputSection {
+  width: fit-content;
+}
+
+.paymentIcons{
+  display: flex;
+  gap: 10px;
+}
+
+.visaLogo{
+  height: 30px;
+  width: 30px;
+}
+
+.cardLogo {
+  height: 30px;
+  width: 30px;
+}
+
+.applepayLogo {
+  height: 30px;
+  width: 30px;
 }
