--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.hero-container {
+    background-color: #f7f5eb;
+    padding: 50px 0;
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .hero-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .hero-text {
+    flex: 1;
+    padding: 0 20px;
+    font-size: 1.8rem;
   }
-}
+  .welcome-message{
+    color: #6ed26f;
+    font-size: 1em;
+  }
+  .order-message {
+    font-size: medium;
+  }
+  .purchase-message {
+    background-color: #6ed26f;
+    border-radius: 25px;
+    height: 30px;
+  }
+  .hero-image {
+    flex: 1;
+    max-width: 100%;
+    margin-top: 1em;
+    width: 900px;
+    height: auto;
+    position: relative;
+    top: 0;
+    left: 0;
+   
+  }
+  
+  .products {
+    background-color: #F1FFF2;
+  }
+  .feature-heading {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .featured-products {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .featured-item {
+    flex-basis: 20%;
+    /* margin-bottom: 20px; */
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+    border: 1px solid #FEFFFD;
+  }
+  .featured-item img {
+    width: 80%;
+    height: auto;
+  }
