--- a/src/components/Testimonial/Testimonialcontainer.css
+++ b/src/components/Testimonial/Testimonialcontainer.css
@@ -1,5 +1,5 @@
 .testimonial-container {
-  background-color: #f1fff2;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,9 +7,11 @@
   padding-top: 25px;
 }
 
-.testimonial-heading {
-  font-size: 30px;
-  font-weight: bold;
-  margin-top: 200px;
-  text-align: center;
+.testimonial {
+  background-color: #f1fff2;
+  padding: 100px 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
