--- a/src/Pages/signup/Signup.css
+++ b/src/Pages/signup/Signup.css
@@ -26,6 +26,7 @@ font-family: 'Young Serif', serif;
     padding: 25px 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-top: 30px;
 }
 
 .container .title {
