--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -22,15 +22,19 @@
     box-shadow: 0px 2px 4px rgba(0,0,0,0.5)
 }
 
-.listItems{
-    list-style: none;
+.navlinks {
+    /* list-style: none; */
+    display: flex;
     justify-content: space-between;
+    position: relative;
     padding-top: 5px;
 }
 
-.list {
+.link {
     display: inline;
     padding: 10px;
+    text-decoration: none;
+    color: black;
 
 }
 .list:hover {
